Server changes and refactoring (#10)
* Fix alphabet streaming bugs, simplify server

* Add minor improvements, implement move grouping based on the word and points

* Delegate SpecialFieldsDeserializer to the common module, minor improvements

* Change implementations of move generator and cross set calculation

* Add point calculation to the move generator

* Refactor